--- a/柯里化/index.html
+++ b/柯里化/index.html
@@ -7,6 +7,7 @@
         <title>Document</title>
     </head>
     <body>
+        <a href="" id="aaa"></a>
         <script src="./index.js"></script>
     </body>
 </html>
