--- a/test/index.html
+++ b/test/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-        <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
+        <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js"></script> -->
+        <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
         <!-- <script src="https://libs.baidu.com/jquery/2.1.4/jquery.min.js"></script> -->
     <button id="btn">click</button>
     <div id="container">
